--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
 	"name": "overflwn",
 	"description": "A lightweight React library featuring the OverflowContainer component that intelligently handles overflow content with a customizable 'more' indicator.",
 	"private": false,
-	"version": "0.1.0",
+	"author": "alonix",
+	"license": "MIT",
+	"homepage": "https://github.com/Insiderto/overflwn",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Insiderto/overflwn.git"
+	},
+	"version": "0.1.1",
 	"type": "module",
 	"main": "./dist/overflwn.umd.js",
 	"module": "./dist/overflwn.es.js",
@@ -22,18 +29,16 @@
 		"lint": "eslint .",
 		"preview": "vite preview"
 	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.1.7",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"tailwind-merge": "^3.3.0",
-		"tailwindcss": "^4.1.7"
-	},
 	"peerDependencies": {
 		"react": "^18.0.0 || ^19.0.0",
 		"react-dom": "^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/vite": "^4.1.7",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"tailwind-merge": "^3.3.0",
+		"tailwindcss": "^4.1.7",
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.25.0",
 		"@radix-ui/react-popover": "^1.1.14",
