--- a/package.json
+++ b/package.json
@@ -9,46 +9,39 @@
 		"type": "git",
 		"url": "git+https://github.com/Insiderto/overflwn.git"
 	},
-	"version": "0.1.1",
+	"version": "0.1.6",
 	"type": "module",
-	"main": "./dist/overflwn.umd.js",
-	"module": "./dist/overflwn.es.js",
-	"types": "./dist/lib/main.d.ts",
-	"exports": {
-		".": {
-			"types": "./dist/lib/main.d.ts",
-			"import": "./dist/overflwn.es.js",
-			"require": "./dist/overflwn.umd.js"
-		}
-	},
+	"main": "dist/overflwn.js",
+	"module": "dist/overflwn.js",
+	"types": "dist/main.d.ts",
 	"files": ["dist"],
+	"sideEffects": ["**/*.css"],
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build",
+		"build": "tsc --p ./tsconfig.lib.json && vite build",
 		"build:demo": "vite build --config vite.demo.config.ts",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"prepublishOnly": "npm run build"
 	},
 	"peerDependencies": {
 		"react": "^18.0.0 || ^19.0.0",
 		"react-dom": "^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.7",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"tailwind-merge": "^3.3.0",
-		"tailwindcss": "^4.1.7",
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.25.0",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slider": "^1.3.5",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "^22.15.21",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.4.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"eslint": "^9.25.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
@@ -57,9 +50,12 @@
 		"prism-react-renderer": "^2.4.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.0",
+		"tailwindcss": "^4.1.7",
 		"tw-animate-css": "^1.3.0",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.30.1",
-		"vite": "^6.3.5"
+		"vite": "^6.3.5",
+		"vite-plugin-dts": "^4.5.4"
 	}
 }
