--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
 		"type": "git",
 		"url": "git+https://github.com/Insiderto/overflwn.git"
 	},
-	"version": "0.1.6",
+	"version": "0.1.9",
 	"type": "module",
 	"main": "dist/overflwn.js",
 	"module": "dist/overflwn.js",
 	"types": "dist/main.d.ts",
-	"files": ["dist"],
-	"sideEffects": ["**/*.css"],
+	"files": [
+		"dist"
+	],
+	"sideEffects": [
+		"**/*.css"
+	],
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc --p ./tsconfig.lib.json && vite build",
@@ -29,12 +33,14 @@
 		"react-dom": "^18.0.0 || ^19.0.0"
 	},
 	"devDependencies": {
+		"@babel/plugin-transform-react-jsx": "^7.27.1",
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.25.0",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.5",
 		"@radix-ui/react-slider": "^1.3.5",
 		"@radix-ui/react-slot": "^1.2.3",
+		"@rollup/plugin-node-resolve": "^16.0.1",
 		"@tailwindcss/vite": "^4.1.7",
 		"@types/node": "^22.15.21",
 		"@types/react": "^19.1.2",
