--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -27,10 +27,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          # No cache option since package-lock.json is in .gitignore
       
       - name: Install dependencies
-        run: npm install
+        run: npm ci || npm install
+        # Fallback to npm install if npm ci fails due to missing package-lock.json
       
       - name: Build demo
         run: npm run build:demo
