--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"type": "git",
 		"url": "git+https://github.com/Insiderto/overflwn.git"
 	},
-	"version": "0.1.11",
+	"keywords": ["react", "overflow", "container", "overflow-container", "overflow-container-react"],
+	"version": "0.1.12",
 	"type": "module",
 	"main": "dist/overflwn.js",
 	"module": "dist/overflwn.js",
